# dependence

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
tests/smoke_tests/: test_aiohttp.py  test_cachebox.py  test_etoon.py  test_logxide.py  test_msgspec.py  test_psqlpy.py  test_python_dotenv.py  test_pyyaml.py  test_sanic.py  test_stamina.py  test_structlog.py  test_uvloop.py  test_zstandard.py
