[project]
name = "enoract"
version = "0.1.0"
description = "Fork-first multi-tenant agent framework where agents enact scenarios"
authors = [
    { name = "E-NoR", email = "enorenor@gmail.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
keywords = ["agent", "llm", "ai", "multi-bot", "multi-tenant", "scenario", "chatbot", "saas", "sanic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]

dependencies = [
    "sanic>=25.12",
    "msgspec>=0.21.1",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "stamina>=26.1.0",
    "aiohttp[speedups]>=3.13.5",
    "cachebox>=5.2.3",
    "zstandard>=0.25",
    "psqlpy>=0.11.12",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "etoon>=0.3",
    "logxide>=0.1.17",        # Rust-backed stdlib logging drop-in (sys.modules swap)
    "structlog>=25.5.0",      # kv-style wrapper over logxide
]

[project.optional-dependencies]
retrieval = [
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "tantivy>=0.26",
    "jieba-next>=1.0.0rc1",
]
eval = [
    "ranx>=0.3.21",
]

locale = [
    "fast-langdetect>=1.0.1",   # numpy 2 compatible fasttext wrapper; bundled lid.176.ftz model (916KB, ~4MB RAM)
    "opencc>=1.3.0",          # zh-TW ↔ zh-CN converter
    "zhon>=2.1.1",            # Chinese char sets (cedict)
    "emoji>=2.15.0",          # emoji stripping in preprocess
]
otel = [
    # Vendor-neutral OTLP/HTTP exporter — Langfuse / Honeycomb / Datadog /
    # Grafana / Jaeger ingest the same payload. `OTLPBackend` activates
    # automatically when `OTEL_EXPORTER_OTLP_ENDPOINT` is set; without
    # this group, the framework falls back to `LogBackend`.
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.scripts]
enoract = "enoract.chat.cli:main"

[project.urls]
Homepage = "https://github.com/coseto6125/enoract"
Documentation = "https://enoract.dev"
Repository = "https://github.com/coseto6125/enoract"
Issues = "https://github.com/coseto6125/enoract/issues"

[dependency-groups]
dev = [
    "pyci-check>=0.2.0",
    "pyrefly>=0.64.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.6.0",
    "ruff>=0.15.12",
    "sanic-testing>=24.6.0",
]

[tool.ruff]
target-version = "py314"   # lint + format target
line-length = 130           # max line length
preview = false             # disable preview-stage rules
fix = true                  # auto-fix where safe
unsafe-fixes = true         # allow potentially-risky auto-fixes
respect-gitignore = true
force-exclude = true
src = ["enoract", "tests"]
exclude = [
    ".git",
    ".venv",
    ".venv-ft",
    ".claude",
    "build",
    "dist",
    "node_modules",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Annotations (we type at boundaries; full coverage adds noise)
    "ANN001", "ANN002", "ANN003", "ANN401", "ANN201", "ANN202", "ANN204", "ANN205",
    # Exception rules (pragmatic)
    "BLE001",   # bare `except Exception:` — sometimes needed
    "TRY003",   # exception messages outside class — verbose alternative
    "TRY300",   # raise from None
    "TRY301",   # raise inner
    "EM101", "EM102",  # raise w/ literal / f-string — readable
    # Complexity
    "C901",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    # Globals (intentional for dispatcher dicts + cache singletons)
    "PLW0602", "PLW0603", "PLW2901",
    # Docstring rules (we don't enforce uniform docstrings everywhere)
    "D100", "D101", "D102", "D103", "D105", "D107",
    "D200", "D205", "D203", "D212",
    "D400", "D407", "D410", "D413", "D415", "D417",
    # Datetime
    "DTZ005", "DTZ006",
    # Style (formatter handles or noisy)
    "COM812", "E501", "E731", "E402",  # E402: bootloader needs to run before sanic import
    "G004",                              # f-string in logger — readable
    "FIX002", "TD002", "TD003",          # TODO author/issue
    "ERA001",                            # commented-out code
    "INP001",                            # implicit namespace
    "FBT001", "FBT002", "FBT003",        # bool positional args
    "RUF001", "RUF002", "RUF003",        # confusable unicode (Chinese identifiers!)
    "RUF018",                            # walrus in assert
    "S324",                              # MD5
    "S311",                              # random
    "SLF001",                            # private attribute access
    "T201",                              # print()
    "UP035", "UP017",                    # typing.X to collections.abc.X migration drift
    "W292",                              # missing newline at EOF
    "PLC0415",                           # lazy import
    "EXE001", "EXE002",                  # shebang
    "PTH",                               # pathlib over os.path — perf cost
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_.*|dummy)$"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]                           # re-exports
"tests/**" = ["D100", "D101", "D104", "ARG", "S101", "S608", "ASYNC109"]  # tests use assert + unused fixture args + intentional SQL strings
"tests/chat/api/webhook/test_line.py" = ["S106"]   # `BotConfig(line_channel_secret=...)` — field name trips S106, not a real password
"conftest.py" = ["D100", "D101", "DTZ001"]
"enoract/web/app.py" = ["E402"]                    # bootloader BEFORE sanic
"enoract/bootloader.py" = ["E402"]                 # ordering matters
"enoract/shared/client/browser_http.py" = ["ASYNC109"]  # get(timeout=...) uses asyncio.timeout internally; param is public API
"enoract/console/knowledge/sources/web/sitemap.py" = ["ASYNC109"]  # discover(timeout=...) uses asyncio.timeout internally; param is public API
"enoract/console/knowledge/sources/web/probe_tw.py" = ["ASYNC109"]  # probe(timeout=...) uses asyncio.timeout internally; param is public API

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
split-on-trailing-comma = false   # match formatter's skip-magic-trailing-comma

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = true
docstring-code-format = false
docstring-code-line-length = "dynamic"
preview = false

[tool.rumdl.MD013]
line-length = 130

[tool.pyci-check]
venv = "."
language = "zh_TW"

[tool.pyrefly]
search-path = ["enoract", "tests"]
project-excludes = [".venv/**", ".venv-ft/**", "build/**", "dist/**"]
check-unannotated-defs = true
infer-return-types = "annotated"
strict-callable-subtyping = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests (requiring network, skipped with -m 'not integration')",
]
# pytest-xdist installed but NOT enabled by default. Reason: ``conftest.db_pool``
# TRUNCATEs the multi-tenancy + bot tables on setup, so parallel workers
# sharing one Postgres would wipe each other's data mid-test. Safe to
# parallelise on test subsets that don't depend on db_pool, e.g.
#     uv run pytest -n auto tests/shared/helpers tests/console/knowledge/test_chunker.py
# Project-wide parallelism requires per-worker DBs (TODO: rewrite ``db_url``
# fixture to append ``_<worker_id>`` and create the DB on first connect).
# Suppress upstream deprecation warnings we cannot fix:
#   - Sanic 25.x imports `websockets.legacy` (deprecated since websockets 14.0)
#   - uvloop calls `asyncio.get_event_loop_policy` / `set_event_loop_policy`
#     which Python 3.14 has deprecated (will be removed in 3.16)
#   - Sanic uses `asyncio.iscoroutinefunction` (also deprecated in 3.14)
# These fire on 3.14 because the APIs are already marked deprecated; they
# are not future-3.16 issues. Re-enable when upstream migrates.
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:sanic.*",
    "ignore::DeprecationWarning:uvloop.*",
    "ignore:.*websockets.legacy.*:DeprecationWarning",
    "ignore:.*asyncio.*deprecated.*:DeprecationWarning",
    "ignore:.*asyncio.get_event_loop_policy.*:DeprecationWarning",
    "ignore:.*asyncio.set_event_loop_policy.*:DeprecationWarning",
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
    "ignore:.*Passing the loop argument to listeners is deprecated.*:DeprecationWarning",
]
