[project]
name = "dependence"
version = "0.1.0"
description = "Dependency smoke-test tracker for the enoract ecosystem"
requires-python = ">=3.14"

[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

# ── enoract core dependencies (mirror of enoract/pyproject.toml) ──────────────
[project.optional-dependencies]
core = [
    "sanic>=25.12",
    "sanic-testing>=24.6.0",
    "msgspec>=0.21.1",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "stamina>=26.1.0",
    "aiohttp[speedups]>=3.13.5",
    "cachebox>=5.2.3",
    "zstandard>=0.25",
    "psqlpy>=0.11.12",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "etoon>=0.3",
    "logxide>=0.1.17",
    "structlog>=25.5.0",
]
retrieval = [
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "tantivy>=0.26",
    "jieba-next>=1.0.0rc1",
]
eval = [
    "ranx>=0.3.21",
]
locale = [
    "fast-langdetect>=1.0.1",
    "opencc>=1.3.0",
    "zhon>=2.1.1",
    "emoji>=2.15.0",
]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires network access, skipped by default in CI",
]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:uvloop.*",
    "ignore:.*asyncio.*deprecated.*:DeprecationWarning",
]
