[project]
name = "enoract-common"
version = "0.1.0"
description = "E-NoR's preferred dependency collection for agent frameworks"
authors = [
    { name = "E-NoR", email = "enorenor@gmail.com" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
keywords = ["agent", "llm", "ai", "dependencies", "framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    # Core web framework + async
    "sanic>=25.12",
    "msgspec>=0.21.1",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    # Reliability + caching
    "stamina>=26.1.0",
    "cachebox>=5.2.3",
    # HTTP + compression
    "aiohttp[speedups]>=3.13.5",
    "zstandard>=0.25",
    # Database + config
    "psqlpy>=0.11.12",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    # Utilities
    "etoon>=0.3",
    # Logging (Rust-backed + structured)
    "logxide>=0.1.17",
    "structlog>=25.5.0",
]

[project.optional-dependencies]
retrieval = [
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "tantivy>=0.26",
    "jieba-next>=1.0.0rc1",
]
eval = [
    "ranx>=0.3.21",
]
locale = [
    "fast-langdetect>=1.0.1",
    "opencc>=1.3.0",
    "zhon>=2.1.1",
    "emoji>=2.15.0",
]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]


[dependency-groups]
test = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.6.0",
    "sanic-testing>=24.6.0",
]
lint = [
    "ruff>=0.15.12",
    "pyci-check>=0.2.0",
]
typecheck = [
    "pyrefly>=0.64.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.6.0",
    "sanic-testing>=24.6.0",
    "ruff>=0.15.12",
    "pyci-check>=0.2.0",
    "pyrefly>=0.64.0",
]

[tool.ruff]
target-version = "py314"
line-length = 130
preview = false
fix = true
unsafe-fixes = true
respect-gitignore = true
force-exclude = true
src = ["."]
exclude = [".git", ".venv", ".venv-ft", ".claude", "build", "dist"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN*", "BLE*", "TRY*", "C901", "PLR091*", "PLW060*", "D*", "DTZ*",
    "COM812", "E501", "E731", "E402", "G004", "FIX*", "TD*", "ERA001",
    "INP001", "FBT*", "RUF*", "S324", "S311", "SLF001", "T201", "UP*",
    "W292", "PLC0415", "EXE*", "PTH",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**" = ["D*", "ARG", "S101", "S608", "ASYNC109"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "auto"
skip-magic-trailing-comma = true
docstring-code-format = false
preview = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires network access, skipped by default in CI",
]
filterwarnings = [
    "ignore::DeprecationWarning:websockets.*",
    "ignore::DeprecationWarning:uvloop.*",
    "ignore:.*asyncio.*deprecated.*:DeprecationWarning",
]
